Change template extension from .invoice to .html

--- a/templates/base/_config.yml
+++ b/templates/base/_config.yml
@@ -11,6 +11,6 @@ exclude:
 plugins:
   - jekyll-invoice
 post:
-  template: _templates/invoice.invoice
+  template: _templates/invoice.html
 editor: vi
 # htmltopdf: wkhtmltopdf
